# KImage

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  FileData.cpp  Filetypes.h  Image.cpp  Image.h
Source/Converter/: BMPConverter.cpp
Source/IO/: FileHandler.cpp
Source/ImageLoader/: BMPImageLoader.cpp  BMPImageLoader.h  ImageLoader.cpp  ImageLoader.h  ImageLoaderManager.cpp  ImageLoaderManager.h
src/: CMakeLists.txt  FileData.cpp  FileData.h  Filetypes.h  Image.cpp  Image.h  ImageData.cpp  ImageData.h
src/Converter/: BMPConverter.cpp  BMPConverter.h
src/IO/: FileHandler.cpp  FileHandler.h
src/ImageLoader/: ImageLoader.h  ImageLoaderManager.cpp
test/: BMPTester.cpp  BMPTester.h  BaseTester.h  CMakeLists.txt  main.cpp
