###PROJECTSOURCE###

cmake_minimum_required(VERSION 3.4)

FILE(GLOB SRCS "*.cpp")
FILE(GLOB HDRS "*.h")
FILE(GLOB LOADERS_SRCS "ImageLoader/*.cpp")
FILE(GLOB LOADERS_HDRS "ImageLoader/*.h")

SET(MY_FILES ${SRCS} ${HDRS})
SET(IMAGELOADERS ${LOADERS_SRCS} ${LOADERS_HDRS})

#Add folders in project
SOURCE_GROUP("Source" FILES ${MY_FILES})
SOURCE_GROUP("Source\\Image Loaders" FILES ${IMAGELOADERS})

ADD_LIBRARY(GEI ${MY_FILES} ${IMAGELOADERS})