###PROJECTSOURCE###

cmake_minimum_required(VERSION 3.4)

FILE(GLOB SRCS "*.cpp")
FILE(GLOB HDRS "*.h")
FILE(GLOB CONVERTERS_SRCS "Converter/*.cpp")
FILE(GLOB CONVERTERS_HDRS "Converter/*.h")
FILE(GLOB IO_SRCS "IO/*.cpp")
FILE(GLOB IO_HDRS "IO/*.h")

SET(MY_FILES ${SRCS} ${HDRS})
SET(CONVERTERS ${CONVERTERS_SRCS} ${CONVERTERS_HDRS})
SET(IO ${IO_SRCS} ${IO_HDRS})

#Add folders in project
SOURCE_GROUP("Source" FILES ${MY_FILES})
SOURCE_GROUP("Source\\Converters" FILES ${CONVERTERS})
SOURCE_GROUP("Source\\IO" FILES ${IO})

ADD_LIBRARY(KImage ${MY_FILES} ${CONVERTERS} ${IO})